fix text alignment

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -93,7 +93,7 @@
   width: 300px;
 }
 
-.col-md-6 {
+.footer-pics {
     text-align: center;
 }
 
